@@ -1,5 +1,10 @@
 2001-10-26  Alex Graveley  <alex@ximian.com>
 
+	* src/libsoup/soup-socket.c (soup_address_new): Use WUNTRACED,
+	which should fix possible hang situation.
+
+2001-10-26  Alex Graveley  <alex@ximian.com>
+
 	* src/libsoup/soup-transfer.c (issue_chunk_callback): Address bug
 	where data buffer passed to chunk callback could be invalid due to
 	appending a null. Just don't addend NULL for chunk callbacks.
